--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.13",
         "laravel/tinker": "^2.8",
+        "opcodesio/log-viewer": "^1.9",
+        "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.9"
     },
     "require-dev": {
